--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
+    "vue-input-tag": "^2.0.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
